--- a/style.css
+++ b/style.css
@@ -1,13 +1,29 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
+*{
+    border: 0;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+
+html,body{
+    width: 100%;
+    height: 100%;
+}
+
+main{
+    max-width: 2000px;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: crimson;
 }
 
 .container{
-    width: 50%;
-    margin: 50px auto;
+    width: 500px;
+    height: auto;
     padding: 20px;
     background-color: white;
     border-radius: 5px;
