ajuste no código

--- a/exercicio_03/style.css
+++ b/exercicio_03/style.css
@@ -7,7 +7,7 @@ body{
 
 .container{
     width: 50%;
-    margin: 50% auto;
+    margin: 50px auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 5px;
